--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 
 defaults: &defaults
   environment:
-    HEROKU_APP_NAMES: "graphapi-twowaykv-dev"
+    HEROKU_APP_NAMES: "graphapi-twowaykv-dev,links-moby-dick"
 
 version: 2
 jobs:
