--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 
 defaults: &defaults
   environment:
-    HEROKU_APP_NAMES: "graphapi-twowaykv-dev,links-moby-dick,links-little-women,links-ulysees,links-en-synonyms"
+    HEROKU_APP_NAMES: "graphapi-twowaykv-dev,links-moby-dick,links-little-women,links-ulysees,links-en-synonyms,links-ar-synonyms"
 
 version: 2
 jobs:
