--- a/links-config.json
+++ b/links-config.json
@@ -1,6 +1,12 @@
 {
   "supportedGraphs": [
     {
+      "name": "المرادفات العربية",
+      "graphEndpoint": "/links-ar-synonyms/biggraph",
+      "kvEndpoint": "/links-ar-synonyms/twowaykv",
+      "lookupEndpoint": "/wiki"
+    },
+    {
       "name": "Wikipedia Articles",
       "graphEndpoint": "/services/biggraph",
       "kvEndpoint": "/services/twowaykv",
